gen/PsicoderParser.java
// Generated from /home/jesus/IdeaProjects/PsiCoder2/Psicoder.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PsicoderParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TK_FUNCIONPRINCIPAL=1, TK_FINPRINCIPAL=2, TK_CHAR=3, TK_BOOL=4, TK_CAD=5, 
		TK_INT=6, TK_DOUBLE=7, TK_ROMPER=8, TK_LEER=9, TK_IMPRIMIR=10, TK_FUNCION=11, 
		TK_HACER=12, TK_RETORNAR=13, TK_FINFUNCION=14, TK_SI=15, TK_ENTONCES=16, 
		TK_FINSI=17, TK_SINO=18, TK_PARA=19, TK_FINPARA=20, TK_MIENTRAS=21, TK_FINMIENTRAS=22, 
		TK_SELECCIONAR=23, TK_ENTRE=24, TK_FINSELECCIONAR=25, TK_CASO=26, TK_DEFECTO=27, 
		TK_ESTRUCTURA=28, TK_FINESTRUCTURA=29, COMMENT=30, LINE_COMMENT=31, ID=32, 
		WS=33, TK_PAR_IZQ=34, TK_PAR_DER=35, TK_PYC=36, TK_PUNTO=37, TK_COMA=38, 
		TK_ASIG=39, TK_DOSP=40, TK_ENTERO=41, TK_REAL=42, TK_CADENA=43, TK_CARACTER=44, 
		VERDADERO=45, FALSO=46, TK_MAS=47, TK_MENOS=48, TK_MULT=49, TK_DIV=50, 
		TK_MOD=51, TK_MENOR=52, TK_MAYOR=53, TK_MENOR_IGUAL=54, TK_MAYOR_IGUAL=55, 
		TK_IGUAL=56, TK_Y=57, TK_O=58, TK_DIF=59, TK_NEG=60;
	public static final int
		RULE_s = 0, RULE_code = 1, RULE_declaracion = 2, RULE_simple = 3, RULE_esperado = 4, 
		RULE_siguiente = 5, RULE_eleccion = 6, RULE_complex = 7, RULE_adicion = 8, 
		RULE_control = 9, RULE_stream = 10, RULE_cuerpo = 11, RULE_otro = 12, 
		RULE_mas = 13, RULE_aritmetico = 14, RULE_operacion = 15, RULE_condicion = 16, 
		RULE_otrascond = 17, RULE_tipo = 18, RULE_f = 19, RULE_tiporet = 20, RULE_ify = 21, 
		RULE_elsey = 22, RULE_fory = 23, RULE_whiley = 24, RULE_do_whiley = 25, 
		RULE_switchy = 26, RULE_casey = 27, RULE_e = 28, RULE_valor = 29, RULE_operando = 30, 
		RULE_logico = 31;
	public static final String[] ruleNames = {
		"s", "code", "declaracion", "simple", "esperado", "siguiente", "eleccion", 
		"complex", "adicion", "control", "stream", "cuerpo", "otro", "mas", "aritmetico", 
		"operacion", "condicion", "otrascond", "tipo", "f", "tiporet", "ify", 
		"elsey", "fory", "whiley", "do_whiley", "switchy", "casey", "e", "valor", 
		"operando", "logico"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'funcion_principal'", "'fin_principal'", "'caracter'", "'booleano'", 
		"'cadena'", "'entero'", "'real'", "'romper'", "'leer'", "'imprimir'", 
		"'funcion'", "'hacer'", "'retornar'", "'fin_funcion'", "'si'", "'entonces'", 
		"'fin_si'", "'si_no'", "'para'", "'fin_para'", "'mientras'", "'fin_mientras'", 
		"'seleccionar'", "'entre'", "'fin_seleccionar'", "'caso'", "'defecto'", 
		"'estructura'", "'fin_estructura'", null, null, null, null, "'('", "')'", 
		"';'", "'.'", "','", "'='", "':'", null, null, null, null, "'verdadero'", 
		"'falso'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'>'", "'<='", "'>='", 
		"'=='", "'&&'", "'||'", "'!='", "'!'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "TK_FUNCIONPRINCIPAL", "TK_FINPRINCIPAL", "TK_CHAR", "TK_BOOL", 
		"TK_CAD", "TK_INT", "TK_DOUBLE", "TK_ROMPER", "TK_LEER", "TK_IMPRIMIR", 
		"TK_FUNCION", "TK_HACER", "TK_RETORNAR", "TK_FINFUNCION", "TK_SI", "TK_ENTONCES", 
		"TK_FINSI", "TK_SINO", "TK_PARA", "TK_FINPARA", "TK_MIENTRAS", "TK_FINMIENTRAS", 
		"TK_SELECCIONAR", "TK_ENTRE", "TK_FINSELECCIONAR", "TK_CASO", "TK_DEFECTO", 
		"TK_ESTRUCTURA", "TK_FINESTRUCTURA", "COMMENT", "LINE_COMMENT", "ID", 
		"WS", "TK_PAR_IZQ", "TK_PAR_DER", "TK_PYC", "TK_PUNTO", "TK_COMA", "TK_ASIG", 
		"TK_DOSP", "TK_ENTERO", "TK_REAL", "TK_CADENA", "TK_CARACTER", "VERDADERO", 
		"FALSO", "TK_MAS", "TK_MENOS", "TK_MULT", "TK_DIV", "TK_MOD", "TK_MENOR", 
		"TK_MAYOR", "TK_MENOR_IGUAL", "TK_MAYOR_IGUAL", "TK_IGUAL", "TK_Y", "TK_O", 
		"TK_DIF", "TK_NEG"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Psicoder.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PsicoderParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SContext extends ParserRuleContext {
		public TerminalNode TK_FUNCIONPRINCIPAL() { return getToken(PsicoderParser.TK_FUNCIONPRINCIPAL, 0); }
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public TerminalNode TK_FINPRINCIPAL() { return getToken(PsicoderParser.TK_FINPRINCIPAL, 0); }
		public List<FContext> f() {
			return getRuleContexts(FContext.class);
		}
		public FContext f(int i) {
			return getRuleContext(FContext.class,i);
		}
		public List<EContext> e() {
			return getRuleContexts(EContext.class);
		}
		public EContext e(int i) {
			return getRuleContext(EContext.class,i);
		}
		public TerminalNode EOF() { return getToken(PsicoderParser.EOF, 0); }
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).exitS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PsicoderVisitor ) return ((PsicoderVisitor<? extends T>)visitor).visitS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		int _la;
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_FUNCIONPRINCIPAL:
			case TK_FUNCION:
			case TK_ESTRUCTURA:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TK_FUNCION || _la==TK_ESTRUCTURA) {
					{
					setState(66);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case TK_FUNCION:
						{
						setState(64);
						f();
						}
						break;
					case TK_ESTRUCTURA:
						{
						setState(65);
						e();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(71);
				match(TK_FUNCIONPRINCIPAL);
				setState(72);
				code();
				setState(73);
				match(TK_FINPRINCIPAL);
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeContext extends ParserRuleContext {
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public List<ControlContext> control() {
			return getRuleContexts(ControlContext.class);
		}
		public ControlContext control(int i) {
			return getRuleContext(ControlContext.class,i);
		}
		public List<StreamContext> stream() {
			return getRuleContexts(StreamContext.class);
		}
		public StreamContext stream(int i) {
			return getRuleContext(StreamContext.class,i);
		}
		public List<TerminalNode> TK_PYC() { return getTokens(PsicoderParser.TK_PYC); }
		public TerminalNode TK_PYC(int i) {
			return getToken(PsicoderParser.TK_PYC, i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).exitCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PsicoderVisitor ) return ((PsicoderVisitor<? extends T>)visitor).visitCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_code);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(83);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						setState(78);
						declaracion();
						}
						break;
					case 2:
						{
						setState(79);
						control();
						}
						break;
					case 3:
						{
						setState(80);
						stream();
						setState(81);
						match(TK_PYC);
						}
						break;
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public SimpleContext simple() {
			return getRuleContext(SimpleContext.class,0);
		}
		public TerminalNode TK_PYC() { return getToken(PsicoderParser.TK_PYC, 0); }
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PsicoderVisitor ) return ((PsicoderVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			simple();
			setState(89);
			match(TK_PYC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public EsperadoContext esperado() {
			return getRuleContext(EsperadoContext.class,0);
		}
		public SimpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).enterSimple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).exitSimple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PsicoderVisitor ) return ((PsicoderVisitor<? extends T>)visitor).visitSimple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleContext simple() throws RecognitionException {
		SimpleContext _localctx = new SimpleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simple);
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_CHAR:
			case TK_BOOL:
			case TK_CAD:
			case TK_INT:
			case TK_DOUBLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				tipo();
				setState(92);
				esperado();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				esperado();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EsperadoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PsicoderParser.ID, 0); }
		public SiguienteContext siguiente() {
			return getRuleContext(SiguienteContext.class,0);
		}
		public EsperadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_esperado; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).enterEsperado(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).exitEsperado(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PsicoderVisitor ) return ((PsicoderVisitor<? extends T>)visitor).visitEsperado(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EsperadoContext esperado() throws RecognitionException {
		EsperadoContext _localctx = new EsperadoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_esperado);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(ID);
			setState(98);
			siguiente();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SiguienteContext extends ParserRuleContext {
		public TerminalNode TK_ASIG() { return getToken(PsicoderParser.TK_ASIG, 0); }
		public EleccionContext eleccion() {
			return getRuleContext(EleccionContext.class,0);
		}
		public ComplexContext complex() {
			return getRuleContext(ComplexContext.class,0);
		}
		public SiguienteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_siguiente; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).enterSiguiente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).exitSiguiente(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PsicoderVisitor ) return ((PsicoderVisitor<? extends T>)visitor).visitSiguiente(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SiguienteContext siguiente() throws RecognitionException {
		SiguienteContext _localctx = new SiguienteContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_siguiente);
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(TK_ASIG);
				setState(101);
				eleccion();
				setState(102);
				complex();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				complex();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EleccionContext extends ParserRuleContext {
		public ValorContext valor() {
			return getRuleContext(ValorContext.class,0);
		}
		public AritmeticoContext aritmetico() {
			return getRuleContext(AritmeticoContext.class,0);
		}
		public TerminalNode ID() { return getToken(PsicoderParser.ID, 0); }
		public TerminalNode TK_PAR_IZQ() { return getToken(PsicoderParser.TK_PAR_IZQ, 0); }
		public SimpleContext simple() {
			return getRuleContext(SimpleContext.class,0);
		}
		public TerminalNode TK_PAR_DER() { return getToken(PsicoderParser.TK_PAR_DER, 0); }
		public EleccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eleccion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).enterEleccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).exitEleccion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PsicoderVisitor ) return ((PsicoderVisitor<? extends T>)visitor).visitEleccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EleccionContext eleccion() throws RecognitionException {
		EleccionContext _localctx = new EleccionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_eleccion);
		try {
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				valor();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				aritmetico();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				match(ID);
				setState(111);
				match(TK_PAR_IZQ);
				setState(112);
				simple();
				setState(113);
				match(TK_PAR_DER);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComplexContext extends ParserRuleContext {
		public TerminalNode TK_COMA() { return getToken(PsicoderParser.TK_COMA, 0); }
		public AdicionContext adicion() {
			return getRuleContext(AdicionContext.class,0);
		}
		public ComplexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).enterComplex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).exitComplex(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PsicoderVisitor ) return ((PsicoderVisitor<? extends T>)visitor).visitComplex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComplexContext complex() throws RecognitionException {
		ComplexContext _localctx = new ComplexContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_complex);
		try {
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_COMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				match(TK_COMA);
				setState(119);
				adicion();
				}
				break;
			case TK_FINESTRUCTURA:
			case TK_PAR_DER:
			case TK_PYC:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdicionContext extends ParserRuleContext {
		public SimpleContext simple() {
			return getRuleContext(SimpleContext.class,0);
		}
		public ValorContext valor() {
			return getRuleContext(ValorContext.class,0);
		}
		public AdicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).enterAdicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).exitAdicion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PsicoderVisitor ) return ((PsicoderVisitor<? extends T>)visitor).visitAdicion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdicionContext adicion() throws RecognitionException {
		AdicionContext _localctx = new AdicionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_adicion);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_CHAR:
			case TK_BOOL:
			case TK_CAD:
			case TK_INT:
			case TK_DOUBLE:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				simple();
				}
				break;
			case TK_ENTERO:
			case TK_REAL:
			case TK_CADENA:
			case TK_CARACTER:
			case VERDADERO:
			case FALSO:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				valor();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ControlContext extends ParserRuleContext {
		public IfyContext ify() {
			return getRuleContext(IfyContext.class,0);
		}
		public ForyContext fory() {
			return getRuleContext(ForyContext.class,0);
		}
		public WhileyContext whiley() {
			return getRuleContext(WhileyContext.class,0);
		}
		public Do_whileyContext do_whiley() {
			return getRuleContext(Do_whileyContext.class,0);
		}
		public SwitchyContext switchy() {
			return getRuleContext(SwitchyContext.class,0);
		}
		public ControlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_control; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).enterControl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PsicoderListener ) ((PsicoderListener)listener).exitControl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PsicoderVisitor ) return ((PsicoderVisitor<? extends T>)visitor).visitControl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControlContext control() throws RecognitionException {
		ControlContext _localctx = new ControlContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_control);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_SI:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				ify();
				}
				break;
			case TK_PARA:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				fory();
				}
				break;
			case TK_MIENTRAS:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				whiley();
				}
				break;
			case TK_HACER:
				enterOuterAlt(_localctx, 4);
				{
				setState(130);
				do_whiley();
				}
				break;
			case TK_SELECCIONAR:
				enterOuterAlt(_localctx, 5);
				{
				setState(131);
				switchy();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
